--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button class="button-primary"><a href="">Inicia de forma gratuita</a></button>
         </div>
     </section>
-    <section class="container card-layout-3">
+    <section class="container grid-card-home-x3">
         <div class="card-features content-card">
             <i class="fas fa-star-of-life fa-2x spacing-item-1 icon"></i>
             <h2 class="title-s spacing-item-1 ">Sin intermediarios</h2>
@@ -62,7 +62,7 @@
             </a>
          </div>
     </section>
-    <section class="container card-layout-2">
+    <section class="container grid-card-home-x2">
         <div class="card-mid">
             <a href="pages/planes.html">
                 <div class="content-card">
