--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -35,58 +35,58 @@
         <div class="grid-card-product">
             <div class="card-product">
                 <img src="../image/product/naranja.png" alt="naranjas">
-                <h2 class="text-size-small">Naranjas jugosas</h2>
-                <p class="text-caption">Precio por 1Kg</p>
-                <h3 class="text-size-small-bold">$650 CLP</h3>
+                <h2 class="text-size-small gap-tb-item-025">Naranjas jugosas</h2>
+                <p class="text-caption gap-tb-item-025">Precio por 1Kg</p>
+                <h3 class="text-size-small-bold gap-tb-item-025">$650 CLP</h3>
                 <button class="button-secondary-small spacing-item-1">Agregar</button>
              </div>
              <div class="card-product">
                 <img src="../image/product/manzanas.png" alt="manzanas">
-                <h2 class="text-size-small">Manzana fuji</h2>
-                <p class="text-caption">Precio por 1Kg</p>
-                <h3 class="text-size-small-bold">$450 CLP</h3>
+                <h2 class="text-size-small gap-tb-item-025">Manzana fuji</h2>
+                <p class="text-caption gap-tb-item-025">Precio por 1Kg</p>
+                <h3 class="text-size-small-bold gap-tb-item-025">$450 CLP</h3>
                 <button class="button-secondary-small spacing-item-1">Agregar</button>
              </div>
              <div class="card-product">
                 <img src="../image/product/galletas.png" alt="galletas">
-                <h2 class="text-size-small">Galletas chips 350g</h2>
-                <p class="text-caption">Unidad de 300g</p>
-                <h3 class="text-size-small-bold">$250 CLP</h3>
+                <h2 class="text-size-small gap-tb-item-025">Galletas chips 350g</h2>
+                <p class="text-caption gap-tb-item-025">Unidad de 300g</p>
+                <h3 class="text-size-small-bold gap-tb-item-025">$250 CLP</h3>
                 <button class="button-secondary-small spacing-item-1">Agregar</button>
              </div>
              <div class="card-product">
                 <img src="../image/product/pie.png" alt="pie">
-                <h2 class="text-size-small">Pie de limón</h2>
-                <p class="text-caption">Unidad 30cm</p>
-                <h3 class="text-size-small-bold">$1.290 CLP</h3>
+                <h2 class="text-size-small gap-tb-item-025">Pie de limón</h2>
+                <p class="text-caption gap-tb-item-025">Unidad 30cm</p>
+                <h3 class="text-size-small-bold gap-tb-item-025">$1.290 CLP</h3>
                 <button class="button-secondary-small spacing-item-1">Agregar</button>
              </div>
              <div class="card-product">
                 <img src="../image/product/pan-amasado.png" alt="pan amasado">
-                <h2 class="text-size-small">Pan amasado</h2>
-                <p class="text-caption">Precio por 1Kg</p>
-                <h3 class="text-size-small-bold">$1.2000 CLP</h3>
+                <h2 class="text-size-small gap-tb-item-025">Pan amasado</h2>
+                <p class="text-caption gap-tb-item-025">Precio por 1Kg</p>
+                <h3 class="text-size-small-bold gap-tb-item-025">$1.2000 CLP</h3>
                 <button class="button-secondary-small spacing-item-1">Agregar</button>
              </div>
              <div class="card-product">
                 <img src="../image/product/pan-masa- fermentado.png" alt="pan fermentado">
-                <h2 class="text-size-small">Pan de masa fermentada</h2>
-                <p class="text-caption">Precio por 1Kg</p>
-                <h3 class="text-size-small-bold">$1.650 CLP</h3>
+                <h2 class="text-size-small gap-tb-item-025">Pan de masa fermentada</h2>
+                <p class="text-caption gap-tb-item-025">Precio por 1Kg</p>
+                <h3 class="text-size-small-bold gap-tb-item-025">$1.650 CLP</h3>
                 <button class="button-secondary-small spacing-item-1">Agregar</button>
              </div>
              <div class="card-product">
                 <img src="../image/product/pan-de-masa-fermentada.png" alt="pan fermentado">
-                <h2 class="text-size-small ">Pan Marraqueta 1Kg</h2>
-                <p class="text-caption">Precio por 1Kg</p>
-                <h3 class="text-size-small-bold">$1.650 CLP</h3>
+                <h2 class="text-size-small  gap-tb-item-025">Pan Marraqueta</h2>
+                <p class="text-caption gap-tb-item-025">Precio por 1Kg</p>
+                <h3 class="text-size-small-bold gap-tb-item-025">$1.650 CLP</h3>
                 <button class="button-secondary-small spacing-item-1">Agregar</button>
              </div> 
              <div class="card-product">
                 <img src="../image/product/pan-masa- fermentado.png" alt="pan fermentado">
-                <h2 class="text-size-small">Pan Baguette 1 Unidad</h2>
-                <p class="text-caption">Precio por 1Kg</p>
-                <h3 class="text-size-small-bold">$1.650 CLP</h3>
+                <h2 class="text-size-small gap-tb-item-025">Pan Baguette</h2>
+                <p class="text-caption gap-tb-item-025">Precio por 1Kg</p>
+                <h3 class="text-size-small-bold gap-tb-item-025">$1.650 CLP</h3>
                 <button class="button-secondary-small spacing-item-1">Agregar</button>
              </div>
         </div>
