ajustes de grid

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     </section>
     <section class="container grid-card-home-x3">
         <div class="card-features content-card">
-            <i class="fas fa-star-of-life fa-2x spacing-item-1 icon"></i>
-            <h2 class="title-s spacing-item-1 ">Sin intermediarios</h2>
-            <p class="text-size-normal spacing-item-1">Los productos se venden directamente del agricultor.</p>
+            <i class="fas fa-star-of-life fa-2x gap-tb-item-1 icon"></i>
+            <h2 class="title-s gap-tb-item-1 ">Sin intermediarios</h2>
+            <p class="text-size-normal gap-tb-item-1">Los productos se venden directamente del agricultor.</p>
         </div>
         <div class="card-features content-card">
-            <i class="fas fa-laugh-beam fa-2x spacing-item-1 icon"></i>
+            <i class="fas fa-laugh-beam fa-2x gap-tb-item-1 icon"></i>
             <h2 class="title-s spacing-item-1 ">Vende simple</h2>
-            <p class="text-size-normal spacing-item-1">Ofrece tus productos frescos a precio justo.</p>
+            <p class="text-size-normal gap-tb-item-1">Ofrece tus productos frescos a precio justo.</p>
         </div>
         <div class="card-features content-card">
-            <i class="fas fa-piggy-bank fa-2x spacing-item-1 icon"></i>
-            <h2 class="title-s spacing-item-1 ">Pago semanal</h2>
-            <p class="text-size-normal spacing-item-1">Realizamos pagos semanales por la venta de tus productos.</p>
+            <i class="fas fa-piggy-bank fa-2x gap-tb-item-1 icon"></i>
+            <h2 class="title-s gap-tb-item-1 ">Pago semanal</h2>
+            <p class="text-size-normal gap-tb-item-1">Realizamos pagos semanales por la venta de tus productos.</p>
         </div>
     </section>
     
@@ -53,10 +53,10 @@
         <div class="card-wide">
             <a href="pages/planes.html">
                 <div class="content-card">
-                    <i class="fas fa-heart fa-2x spacing-item-1 icon"></i>
+                    <i class="fas fa-heart fa-2x gap-tb-item-1 icon"></i>
                     <h2 class="subtitle spacing-item-1">Compromisos con las PYMES</h2>
-                    <p class="text-size-normal spacing-item-1">Ofrecemos un espacio simple para que las PYMES agrícolas de Chile puedan ofrecer sus productos y lograr acuerdos comerciales justos.</p>
-                    <button class="button-secondary spacing-item-1">Comenzar <i class="fas fa-angle-right"></i></button>
+                    <p class="text-size-normal gap-tb-item-1">Ofrecemos un espacio simple para que las PYMES agrícolas de Chile puedan ofrecer sus productos y lograr acuerdos comerciales justos.</p>
+                    <button class="button-secondary gap-tb-item-1">Comenzar <i class="fas fa-angle-right"></i></button>
                 </div>
                     <img src="image/sales.jpg" alt="sale">
             </a>
@@ -66,18 +66,18 @@
         <div class="card-mid">
             <a href="pages/planes.html">
                 <div class="content-card">
-                    <i class="fas fa-globe-americas fa-2x spacing-item-1 icon"></i>
-                    <h2 class="subtitle spacing-item-1">Cuidamos el planeta</h2>
-                    <p class="text-size-normal spacing-item-1">Estamos comprometidos con el uso responsable del agua, reducir los desperdicios y evitar el plasticos de un solo uso.</p>
+                    <i class="fas fa-globe-americas fa-2x gap-tb-item-1 icon"></i>
+                    <h2 class="subtitle gap-tb-item-1">Cuidamos el planeta</h2>
+                    <p class="text-size-normal gap-tb-item-1">Estamos comprometidos con el uso responsable del agua, reducir los desperdicios y evitar el plasticos de un solo uso.</p>
                 </div>
             </a>
          </div>
          <div class="card-mid">
             <a href="pages/planes.html">
                 <div class="content-card">
-                    <i class="fas fa-star fa-2x spacing-item-1 icon"></i>
-                    <h2 class="subtitle spacing-item-1">Productos frescos</h2>
-                    <p class="text-size-normal spacing-item-1">Ofrecemos productos imperfectos, pero cuidadosamente seleccionados. Así evitamos el desperdicio de alimentos.</p>
+                    <i class="fas fa-star fa-2x gap-tb-item-1 icon"></i>
+                    <h2 class="subtitle gap-tb-item-1">Productos frescos</h2>
+                    <p class="text-size-normal gap-tb-item-1">Ofrecemos productos imperfectos, pero cuidadosamente seleccionados. Así evitamos el desperdicio de alimentos.</p>
                 </div>
             </a>
          </div>
@@ -85,8 +85,8 @@
     <section class="container">
         <div class="card-wide">
             <div class="content-card">
-                <h2 class="title spacing-item-1">Nuestros socios</h2>
-                <p class="text-size-normal spacing-item-1">Todos los agricultores de Chile son bienvenidos a postular para formar parte de Bluni. Una vez aprobada la solicitud sus productos estarán disponibles instantáneamente.</p>
+                <h2 class="title gap-tb-item-1">Nuestros socios</h2>
+                <p class="text-size-normal gap-tb-item-1">Todos los agricultores de Chile son bienvenidos a postular para formar parte de Bluni. Una vez aprobada la solicitud sus productos estarán disponibles instantáneamente.</p>
                 <div class="logos">
                     <img src="image/logo-ranguel.svg" alt="ranguel">
                     <img src="image/logo-coihue.svg" alt="coihue">
