--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -25,13 +25,12 @@
     </header>
     <section class="hero hero-page-input">
         <div class="content">    
-            <h1 class="title-xl spacing-item-2">Explora las tiendas disponibles en un radio cercano</h1>
+            <h1 class="title-xl gap-tb-item-2">Explora las tiendas disponibles en un radio cercano</h1>
             <input type="text" name="search" placeholder="Buscar productos">
         </div>
-
     </section>
     <section class="container">
-        <h2 class="title spacing-item-3 center">Productos destacados de la semana</h2>
+        <h2 class="title gap-tb-item-3 center">Productos destacados de la semana</h2>
         <div class="grid-card-product">
             <div class="card-product">
                 <img src="../image/product/naranja.png" alt="naranjas">
@@ -49,7 +48,7 @@
              </div>
              <div class="card-product">
                 <img src="../image/product/galletas.png" alt="galletas">
-                <h2 class="text-size-small gap-tb-item-025">Galletas chips 350g</h2>
+                <h2 class="text-size-small gap-tb-item-025">Galletas chips</h2>
                 <p class="text-caption gap-tb-item-025">Unidad de 300g</p>
                 <h3 class="text-size-small-bold gap-tb-item-025">$250 CLP</h3>
                 <button class="button-secondary-small spacing-item-1">Agregar</button>
@@ -92,34 +91,38 @@
         </div>
     </section>
     <section class="container">
-        <h2 class="title spacing-item-3 center">Tiendas destacadas</h2>
-        <div class="store-layout">
-            <div class="card-product">
+        <h2 class="title gap-tb-item-3 center">Tiendas destacadas</h2>
+        <div class="grid-card-store">
+            <div class="card-store">
                 <a href="">
                     <img src="../image/store/tienda-1.png" alt="tienda la unión">
-                    <h2>Saturno Market</h2>
-                    <p>Carlos Prendez 8704, Hualpén</p>
+                    <h2 class="gap-tb-item-025">Saturno Market</h2>
+                    <p class="text-caption gap-tb-item-025">Horario: 11:00 - 19:30</p>
+                    <p class="gap-tb-item-025">Carlos Prendez 8704, Hualpén</p>
                 </a>
              </div>
-             <div class="card-product">
+             <div class="card-store">
                  <a href="">
                      <img src="../image/store/tienda-2.png" alt="tienda la unión">
-                     <h2>Blanco Encalada Market</h2>
-                     <p>Blanco Encalada 298, Talcahuano</p>
+                     <h2 class="gap-tb-item-025">Blanco Encalada Market</h2>
+                     <p class="text-caption gap-tb-item-025">Horario: 11:00 - 19:30</p>
+                     <p class="gap-tb-item-025">Blanco Encalada 298, Talcahuano</p>
                  </a>
               </div>
-              <div class="card-product">
+              <div class="card-store">
                  <a href="">
                      <img src="../image/store/tienda-3.png" alt="tienda la unión">
-                     <h2>Latorre Market</h2>
-                     <p>Latorre 1295, Talcahuano</p>
+                     <h2 class="gap-tb-item-025">Latorre Market</h2>
+                     <p class="text-caption gap-tb-item-025">Horario: 11:00 - 19:30</p>
+                     <p class="gap-tb-item-025">Latorre 1295, Talcahuano</p>
                  </a>
               </div>
-              <div class="card-product">
+              <div class="card-store">
                  <a href="">
                      <img src="../image/store/tienda-4.png" alt="tienda la unión">
-                     <h2>Don Juan Mercado central</h2>
-                     <p>Dirección: Bilbao 343, Talcahuano</p>
+                     <h2 class="gap-tb-item-025">Don Juan Mercado central</h2>
+                     <p class="text-caption gap-tb-item-025">Horario: 11:00 - 19:30</p>
+                     <p class="gap-tb-item-025">Bilbao 343, Talcahuano</p>
                  </a>
               </div>
         </div>
