--- a/pages/planes.html
+++ b/pages/planes.html
@@ -23,30 +23,30 @@
             </ul>
         </nav>
     </header>
-    <section class="hero hero-plans">
-        <div class="container">
-            <h1 class="title white-color">Descubre las características de los planes que tenemos para ti</h1>
-            <p class="text-size-normal white-color">Maneje su inventario y venda desde un mismo sitio</p>
+    <section class="hero hero-page-input">
+        <div class="content">    
+            <h1 class="title-xl gap-tb-item-2">Descubre las características de los planes que tenemos para ti</h1>
+            <p class="text-size-normal">Maneje su inventario y venda desde un mismo sitio</p>
         </div>
     </section>
     <section class="container">
-        <div class="card-layout">
+        <div class="grid-card-plans">
             <div class="card-text space-left">
-                <i class="fas fa-seedling fa-4x spacing-item-1"></i>
-                <h3 class="title spacing-item-1">Plan Gratis</h3>
-                <p class="text-size-normal spacing-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam exercitationem aut est facere.</p>
-                <h4 class="title spacing-item-1">$0</h4>
-                <button class="button-primary spacing-item-1">Elegir plan</button>
+                <i class="fas fa-seedling fa-4x gap-tb-item-1"></i>
+                <h3 class="title gap-tb-item-1">Plan Gratis</h3>
+                <p class="text-size-normal gap-tb-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam exercitationem aut est facere.</p>
+                <h4 class="title gap-tb-item-1">$0</h4>
+                <button class="button-primary gap-tb   -item-1">Elegir plan</button>
             </div>
             <div class="card-text">
-                <i class="fas fa-lemon fa-4x spacing-item-1"></i>
-                <h3 class="title spacing-item-1 ">Plan Lemon</h3>
-                <p class="text-size-normal spacing-item-1 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam exercitationem aut est facere.</p>
-                <h4 class="title spacing-item-1 ">$20/mes</h4>
-                <button class="button-primary spacing-item-1">Elegir plan</button>
+                <i class="fas fa-lemon fa-4x gap-tb-item-1"></i>
+                <h3 class="title gap-tb-item-1 ">Plan Lemon</h3>
+                <p class="text-size-normal gap-tb-item-1 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam exercitationem aut est facere.</p>
+                <h4 class="title gap-tb-item-1 ">$2.500 CPL/mes</h4>
+                <button class="button-primary gap-tb-item-1">Elegir plan</button>
             </div>
         </div>
-        <h2 class="title">Funciones del plan</h2>
+        <h2 class="title center gap-tb-item-3">Funciones del plan</h2>
         <table>
             <!--Filas-->
             <tr>
@@ -118,11 +118,11 @@
             <tr>
                 <td class="table-feature table-title">Precio</td>
                 <td class="table-title table-price">$0</td>
-                <td class="table-title table-price">$20/mes</td>
+                <td class="table-title table-price">$2.500 CLP/mes</td>
             </tr> 
         </table>
     </section>
-    <h2 class="title">Preguntas Frecuentes</h2>
+    <h2 class="title center gap-tb-item-3">Preguntas Frecuentes</h2>
     <section class="container">
         <div class="card-layout">
             <div class="card-text">
