ajustes en modo mobile

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -31,21 +31,21 @@
             <button class="button-primary"><a href="">Inicia de forma gratuita</a></button>
         </div>
     </section>
-    <section class="container grid-card-home-x3">
+    <section class="container grid-card-x3">
         <div class="card-features content-card">
             <i class="fas fa-star-of-life fa-2x gap-tb-item-1 icon"></i>
             <h2 class="title-s gap-tb-item-1 ">Sin intermediarios</h2>
-            <p class="text-size-normal gap-tb-item-1">Los productos se venden directamente del agricultor.</p>
+            <p class="text-size-normal gap-tb-item-1">Tus clientes hacen el pedido directo a tu catálogo.</p>
         </div>
         <div class="card-features content-card">
             <i class="fas fa-laugh-beam fa-2x gap-tb-item-1 icon"></i>
-            <h2 class="title-s spacing-item-1 ">Vende simple</h2>
+            <h2 class="title-s gap-tb-item-1 ">Vende simple</h2>
             <p class="text-size-normal gap-tb-item-1">Ofrece tus productos frescos a precio justo.</p>
         </div>
         <div class="card-features content-card">
             <i class="fas fa-piggy-bank fa-2x gap-tb-item-1 icon"></i>
-            <h2 class="title-s gap-tb-item-1 ">Pago semanal</h2>
-            <p class="text-size-normal gap-tb-item-1">Realizamos pagos semanales por la venta de tus productos.</p>
+            <h2 class="title-s gap-tb-item-1 ">Sin comisiones</h2>
+            <p class="text-size-normal gap-tb-item-1">Puedes vender gratis y sin letra chica.</p>
         </div>
     </section>
     
@@ -62,13 +62,13 @@
             </a>
          </div>
     </section>
-    <section class="container grid-card-home-x2">
+    <section class="container grid-card-x2">
         <div class="card-mid">
             <a href="pages/planes.html">
                 <div class="content-card">
                     <i class="fas fa-globe-americas fa-2x gap-tb-item-1 icon"></i>
                     <h2 class="subtitle gap-tb-item-1">Cuidamos el planeta</h2>
-                    <p class="text-size-normal gap-tb-item-1">Estamos comprometidos con el uso responsable del agua, reducir los desperdicios y evitar el plasticos de un solo uso.</p>
+                    <p class="text-size-normal gap-tb-item-1">Fomentamos el uso responsable del agua, reducir los desperdicios y evitar el plasticos de un solo uso.</p>
                 </div>
             </a>
          </div>
