--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Nosotros - Bluni</title>
@@ -23,14 +23,14 @@
             </ul>
         </nav>
     </header>
-    <section class="hero hero-team">
-        <div>
-            <h1 class="title white-color">Conoce al equipo</h1>
-            <p class="text-size-normal white-color">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+    <section class="hero hero-page">
+        <div class="content">    
+            <h1 class="title-xl gap-tb-item-2">Descubre las características de los planes que tenemos para ti</h1>
+            <p class="text-size-normal">Maneje su inventario y venda desde un mismo sitio</p>
         </div>
     </section>
     <section class="container">
-        <div class="team-layout">
+        <div class="grid-card-x4">
             <div class="card-team">
                 <img src="../image/lando.jpg" alt="Lando">
                 <h3>Lando Norris</h3>
@@ -51,14 +51,18 @@
                 <h3>Manuel Campos</h3>
                 <p>Finanzas</p>
             </div>
-        </div>
-        
+        </div>  
     </section>
     <section class="container">
-        <div class="card-text">
-            <h3 class="title">Nuestra cultura</h3>
-            <p class="text-size-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil laboriosam maxime, culpa explicabo amet adipisci dolores itaque officiis placeat eos voluptatibus assumenda tenetur rem voluptatum beatae asperiores quibusdam voluptate rerum?</p>
-        </div>
+        <div class="card-wide">
+            <img src="/image/hero-team.jpg" alt="sale">
+            <div class="content-card">
+                <i class="fas fa-heart fa-2x gap-tb-item-1 icon"></i>
+                <h2 class="subtitle spacing-item-1">Compromisos con las PYMES</h2>
+                <p class="text-size-normal gap-tb-item-1">Ofrecemos un espacio simple para que las PYMES agrícolas de Chile puedan ofrecer sus productos y lograr acuerdos comerciales justos.</p>
+                <button class="button-secondary gap-tb-item-1">Comenzar <i class="fas fa-angle-right"></i></button>
+            </div>
+         </div>
     </section>
     <footer class="text-size-small">
         <div class="container footer-box">
