--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Explorar - Bluni</title>
@@ -23,7 +23,7 @@
             </ul>
         </nav>
     </header>
-    <section class="hero hero-page-input">
+    <section class="hero hero-page">
         <div class="content">    
             <h1 class="title-xl gap-tb-item-2">Explora las tiendas disponibles en un radio cercano</h1>
             <input type="text" name="search" placeholder="Buscar productos">
@@ -31,7 +31,7 @@
     </section>
     <section class="container">
         <h2 class="title gap-tb-item-3 center">Productos destacados de la semana</h2>
-        <div class="grid-card-product">
+        <div class="grid-card-x4">
             <div class="card-product">
                 <img src="../image/product/naranja.png" alt="naranjas">
                 <h2 class="text-size-small gap-tb-item-025">Naranjas jugosas</h2>
@@ -92,7 +92,7 @@
     </section>
     <section class="container">
         <h2 class="title gap-tb-item-3 center">Tiendas destacadas</h2>
-        <div class="grid-card-store">
+        <div class="grid-card-x2">
             <div class="card-store">
                 <a href="">
                     <img src="../image/store/tienda-1.png" alt="tienda la unión">
