ajustes en icon

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -57,10 +57,9 @@
         <div class="card-wide">
             <img src="/image/hero-team.jpg" alt="sale">
             <div class="content-card">
-                <i class="fas fa-heart fa-2x gap-tb-item-1 icon"></i>
-                <h2 class="subtitle spacing-item-1">Compromisos con las PYMES</h2>
-                <p class="text-size-normal gap-tb-item-1">Ofrecemos un espacio simple para que las PYMES agrícolas de Chile puedan ofrecer sus productos y lograr acuerdos comerciales justos.</p>
-                <button class="button-secondary gap-tb-item-1">Comenzar <i class="fas fa-angle-right"></i></button>
+                <i class="fas fa-leaf fa-2x gap-tb-item-1 icon"></i>
+                <h2 class="subtitle spacing-item-1">Nuestro comprimiso con los productos orgánicos</h2>
+                <p class="text-size-normal gap-tb-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga accusamus ipsum a minus officiis necessitatibus soluta id tempora incidunt consectetur, nulla quae, ex sequi reiciendis quo quibusdam enim natus. Veniam.</p>
             </div>
          </div>
     </section>
