--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -23,36 +23,39 @@
             </ul>
         </nav>
     </header>
-    <section class="hero hero-help">
-        <h1 class="title white-color">Escríbenos algo </h1>
+    <section class="hero hero-page">
+        <div class="content">    
+            <h1 class="title-xl gap-tb-item-2">Si tienes dudas nos puedes contactar</h1>
+            <p class="text-size-normal">Si tiene alguna pregunta o comentario nos puedes escribir</p>
+        </div>
     </section>
-    <section class="container form-box">
-        <h2 class="subtitle">Si tienes dudas nos puedes contactar</h2>
-        <section class="store-layout">
-            <section>
+    <section class="container">
+        <h2 class="subtitle"></h2>
+        <section class="grid-card-x2 grid-card-x2-1">
+            <section class="card-mid">
+                <h2 class="title-s">Contáctenos</h2>
                 <form action="" method="get" enctype="application/x-www-form-urlencoded">
-                    <div class="spacing-item-2">
+                    <div class="gap-tb-item-2">
                         <label for="name">Nombre</label>
                         <input type="text" name="nombre" placeholder="Ingresa tu Nombre" required>
                     </div>
-                    <div class="spacing-item-2">
+                    <div class="gap-tb-item-2">
                         <label for="mail">Mail</label>
                         <input type="email" name="mail" placeholder="Ingresa tu mail" required>  
                     </div>
-                    <div class="spacing-item-2">
+                    <div class="gap-tb-item-2">
                         <label for="mensaje">Mensaje</label>
-                        <textarea name="mensaje" id="" cols="30" rows="5" placeholder="Puedes anotar aquí"></textarea>   
+                        <textarea name="mensaje" id="" cols="30" rows="6" placeholder="Puedes anotar aquí"></textarea>   
                     </div>
-                    <button class="button-primary">Enviar Mensaje</button>
+                    <button class="button-primary gap-tb-item-1">Enviar mensaje</button>
                 </form>
             </section>
-            <section>
+            <section class="card-mid">
                 <div>
-                    <h3 class="text-size-normal spacing-item-1">Sede en Chile</h3>
-                    <p class="text-size-small spacing-item-1">Concepción, Chile</p>
+                    <h3 class="title-s">Sede en Chile</h3>
                 </div>
-                <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d102197.98141435975!2d-73.10308565770457!3d-36.82602156062621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9669b5cdd2bbc63b%3A0x44cb37b752212698!2zQ29uY2VwY2nDs24sIELDrW8gQsOtbw!5e0!3m2!1ses-419!2scl!4v1642310472698!5m2!1ses-419!2scl" width="auto" height="550" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
+                <div class="gap-tb-item-2">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d102197.98141435975!2d-73.10308565770457!3d-36.82602156062621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9669b5cdd2bbc63b%3A0x44cb37b752212698!2zQ29uY2VwY2nDs24sIELDrW8gQsOtbw!5e0!3m2!1ses-419!2scl!4v1642310472698!5m2!1ses-419!2scl" width="100%" height="650" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
                 </div>
             </section>
 
