entrega del desafío grids

--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -141,7 +141,7 @@
                 </p>
             </div>
             <div class="text-size-small bluni-color ">
-                <p>Copyright © 2022. <img src="/favicon.ico" alt="bluni"><a href="index"> Bluni Co.</a></p>
+                <p>Copyright © 2022. <img src="../image/logo-footer.svg" alt="bluni"><a href="index"> Bluni Co.</a></p>
             </div>
         </div>
     </footer>
