--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -55,7 +55,7 @@
     </section>
     <section class="container">
         <div class="card-wide">
-            <img src="/image/hero-team.jpg" alt="sale">
+            <img src="../image/hero-team.jpg" alt="sale">
             <div class="content-card">
                 <i class="fas fa-leaf fa-2x gap-tb-item-1 icon"></i>
                 <h2 class="subtitle spacing-item-1">Nuestro comprimiso con los productos orgánicos</h2>
@@ -76,7 +76,7 @@
                 </p>
             </div>
             <div class="text-size-small bluni-color ">
-                <p>Copyright © 2022. <img src="/favicon.ico" alt="bluni"><a href="index"> Bluni Co.</a></p>
+                <p>Copyright © 2022. <img src="../image/logo-footer.svg" alt="bluni"><a href="index"> Bluni Co.</a></p>
             </div>
         </div>
     </footer>
