--- a/pages/planes.html
+++ b/pages/planes.html
@@ -114,17 +114,17 @@
         <div class="card-mid">
             <a href="pages/planes.html">
                 <div class="content-card">
-                    <i class="fas fa-globe-americas fa-2x gap-tb-item-1 icon"></i>
-                    <h2 class="subtitle gap-tb-item-1">Capacitación</h2>
-                    <p class="text-size-normal gap-tb-item-1">Te ayudamos a disminuir los residuos orgánicos e implementar tecnología para hacer uso responsable del agua.</p>
+                    <i class="fas fa-laugh-beam fa-2x gap-tb-item-1 icon"></i>
+                    <h2 class="subtitle gap-tb-item-1">100% de satisfacción o garantía de devolución de dinero</h2>
+                    <p class="text-size-normal gap-tb-item-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </a>
          </div>
          <div class="card-mid">
             <a href="pages/planes.html">
                 <div class="content-card">
-                    <i class="fas fa-star fa-2x gap-tb-item-1 icon"></i>
-                    <h2 class="subtitle gap-tb-item-1">Productos frescos</h2>
+                    <i class="fas fa-shopping-basket fa-2x gap-tb-item-1 icon"></i>
+                    <h2 class="subtitle gap-tb-item-1">Vende en todas partes</h2>
                     <p class="text-size-normal gap-tb-item-1">Ofrecemos productos imperfectos, pero cuidadosamente seleccionados. Así evitamos el desperdicio de alimentos.</p>
                 </div>
             </a>
@@ -132,9 +132,9 @@
          <div class="card-mid">
             <a href="pages/planes.html">
                 <div class="content-card">
-                    <i class="fas fa-star fa-2x gap-tb-item-1 icon"></i>
-                    <h2 class="subtitle gap-tb-item-1">Productos frescos</h2>
-                    <p class="text-size-normal gap-tb-item-1">Ofrecemos productos imperfectos, pero cuidadosamente seleccionados. Así evitamos el desperdicio de alimentos.</p>
+                    <i class="fab fa-pied-piper-pp fa-2x gap-tb-item-1 icon"></i>
+                    <h2 class="subtitle gap-tb-item-1">CDN de Pied Piper gratuito</h2>
+                    <p class="text-size-normal gap-tb-item-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
             </a>
          </div>
@@ -152,7 +152,7 @@
                 </p>
             </div>
             <div class="text-size-small bluni-color ">
-                <p>Copyright © 2022. <img src="/favicon.ico" alt="bluni"><a href="index"> Bluni Co.</a></p>
+                <p>Copyright © 2022. <img src="../image/logo-footer.svg" alt="bluni"><a href="index"> Bluni Co.</a></p>
             </div>
         </div>
     </footer>
