--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Nosotros - Bluni</title>
 </head>
 <body>
@@ -76,7 +77,7 @@
                 </p>
             </div>
             <div class="text-size-small bluni-color ">
-                <p>Copyright © 2022. <img src="../image/logo-footer.svg" alt="bluni"><a href="index"> Bluni Co.</a></p>
+                <p>Copyright © 2022. <img src="image/logo-footer.svg" alt="bluni"><a href="index"> Bluni Co.</a></p>
             </div>
         </div>
     </footer>
