--- a/pages/planes.html
+++ b/pages/planes.html
@@ -7,22 +7,40 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Planes - Bluni</title>
 </head>
 <body>
     <header>
-        <nav class="menu">
-            <figure>
-                <a href="../index.html"><img src="../image/logo.svg" alt=""></a>
-            </figure>
-            <ul class="text-size-normal">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/planes.html">Planes</a></li>
-                <li><a href="../pages/explorar.html">Explorar</a></li>
-                <li><a href="../pages/nosotros.html">Personas</a></li>
-                <li><a href="../pages/ayuda.html">Ayuda</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+            <div class="container-md">
+                <figure>
+                    <a href="../index.html"><img src="../image/logo.svg" alt="bluni"></a>
+                </figure>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/planes.html">Planes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/explorar.html">Explorar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/nosotros.html">Personas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/ayuda.html">Ayuda</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <section class="hero hero-page">
         <div class="content">    
@@ -30,7 +48,7 @@
             <p class="text-size-normal">Maneje su inventario y venda desde un mismo sitio</p>
         </div>
     </section>
-    <section class="container">
+    <section class="container-md">
         <div class="grid-card-x2">
             <div class="card-text space-left">
                 <i class="fas fa-seedling fa-4x gap-tb-item-1"></i>
@@ -49,7 +67,7 @@
         </div>
         <h2 class="title center gap-tb-item-3">Funciones del plan</h2>
         <div class="table">
-            <table>
+            <table class="table-plan">
                 <!--Filas-->
                 <tr>
                     <th></th>
@@ -111,7 +129,7 @@
         </div>
     </section>
     <h2 class="title center gap-tb-item-3">Beneficios</h2>
-    <section class="container grid-card-x3">
+    <section class="container-md grid-card-x3">
         <div class="card-mid">
             <a href="pages/planes.html">
                 <div class="content-card">
@@ -141,7 +159,7 @@
          </div>
     </section>
     <footer class="text-size-small">
-        <div class="container footer-box">
+        <div class="container-md footer-box">
             <div class="rrss text-size-small">
                 <a href="http://twitter.com" target="_blank"><span><i class="fab fa-twitter fa-1x"></i></span>  Twitter</a>
                 <a href="http://facebook.com" target="_blank"><span><i class="fab fa-facebook fa-1x"></i></span>  Facebook</a>
@@ -157,5 +175,6 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
