ajustes de  bootstrap

--- a/pages/planes.html
+++ b/pages/planes.html
@@ -23,19 +23,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link fs-5" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/planes.html">Planes</a>
+                    <a class="nav-link active fs-5" href="../pages/planes.html">Planes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/explorar.html">Explorar</a>
+                    <a class="nav-link fs-5" href="../pages/explorar.html">Explorar</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/nosotros.html">Personas</a>
+                    <a class="nav-link fs-5" href="../pages/nosotros.html">Personas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/ayuda.html">Ayuda</a>
+                    <a class="nav-link fs-5" href="../pages/ayuda.html">Ayuda</a>
                   </li>
                 </ul>
               </div>
@@ -66,8 +66,8 @@
             </div>
         </div>
         <h2 class="title center gap-tb-item-3">Funciones del plan</h2>
-        <div class="table">
-            <table class="table-plan">
+        <div class="table-plan">
+            <table class="">
                 <!--Filas-->
                 <tr>
                     <th></th>
@@ -76,11 +76,11 @@
                 </tr>
                 <tr>
                     <th></th>
-                    <th class="table-title">Plan Gratis</th>
-                    <th class="table-title">Plan Lemon</th>
+                    <th class="table-title align-middle">Plan Gratis</th>
+                    <th class="table-title align-middle">Plan Lemon</th>
                 </tr>
                 <tr>
-                    <td class="table-feature table-title">Características</td>
+                    <td class="table-feature table-title-s">Características</td>
                     <td class="table-free"></td>
                     <td></td>
                   
