--- a/index.html
+++ b/index.html
@@ -16,34 +16,34 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
             <div class="container-md">
                 <figure>
-                    <a href="../index.html"><img src="../image/logo.svg" alt="bluni"></a>
+                    <a href="../index.html"><img src="../image/logo.svg" alt=""></a>
                 </figure>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    <a class="nav-link active fs-5" aria-current="page" href="#">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/planes.html">Planes</a>
+                    <a class="nav-link fs-5" href="../pages/planes.html">Planes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/explorar.html">Explorar</a>
+                    <a class="nav-link fs-5" href="../pages/explorar.html">Explorar</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/nosotros.html">Personas</a>
+                    <a class="nav-link fs-5" href="../pages/nosotros.html">Personas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/ayuda.html">Ayuda</a>
+                    <a class="nav-link fs-5" href="../pages/ayuda.html">Ayuda</a>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
     </header>
-    <section class="hero-home hero-background-home">
+    <section class="hero-home hero-background-home container-fluid">
         <div class="container-hero">
             <h1 class="title-xl black-color">Un espacio para vender tus productos frescos</h1>
             <p class="text-size-normal black-color">Te ayudamos a que llegues a miles de personas con tus productos productos frescos.</p>
@@ -132,5 +132,6 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
