--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -23,19 +23,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link fs-5" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/planes.html">Planes</a>
+                    <a class="nav-link fs-5" href="../pages/planes.html">Planes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/explorar.html">Explorar</a>
+                    <a class="nav-link active fs-5" href="../pages/explorar.html">Explorar</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/nosotros.html">Personas</a>
+                    <a class="nav-link fs-5" href="../pages/nosotros.html">Personas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/ayuda.html">Ayuda</a>
+                    <a class="nav-link fs-5" href="../pages/ayuda.html">Ayuda</a>
                   </li>
                 </ul>
               </div>
