ajustes en menú

--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-            <div class="container-md">
+            <div class="container-fluid">
                 <figure>
                     <a href="../index.html"><img src="../image/logo.svg" alt=""></a>
                 </figure>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active fs-5" aria-current="page" href="#">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link fs-5" href="../pages/planes.html">Planes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link fs-5" href="../pages/explorar.html">Explorar</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link fs-5" href="../pages/nosotros.html">Personas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link fs-5" href="../pages/ayuda.html">Ayuda</a>
-                  </li>
-                </ul>
-              </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active fs-5" aria-current="page" href="index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link fs-5" href="../pages/planes.html">Planes</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link fs-5" href="../pages/explorar.html">Explorar</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link fs-5" href="../pages/nosotros.html">Personas</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link fs-5" href="../pages/ayuda.html">Ayuda</a>
+                      </li>
+                    </ul>
+                  </div>
             </div>
-          </nav>
+        </nav> 
     </header>
-    <section class="hero-home hero-background-home container-fluid">
+    <section class=" hero-home hero-background-home">
         <div class="container-hero">
             <h1 class="title-xl black-color">Un espacio para vender tus productos frescos</h1>
             <p class="text-size-normal black-color">Te ayudamos a que llegues a miles de personas con tus productos productos frescos.</p>
