--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,34 +13,34 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-            <div class="container-md">
+            <div class="container-fluid">
                 <figure>
-                    <a href="../index.html"><img src="../image/logo.svg" alt="bluni"></a>
+                    <a href="../index.html"><img src="../image/logo.svg" alt=""></a>
                 </figure>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link fs-5" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link fs-5" href="../pages/planes.html">Planes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link fs-5" href="../pages/explorar.html">Explorar</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active fs-5" href="../pages/nosotros.html">Personas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link fs-5" href="../pages/ayuda.html">Ayuda</a>
-                  </li>
-                </ul>
-              </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link fs-5" aria-current="page" href="../index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link fs-5" href="../pages/planes.html">Planes</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link fs-5" href="../pages/explorar.html">Explorar</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active fs-5" href="../pages/nosotros.html">Personas</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link fs-5" href="../pages/ayuda.html">Ayuda</a>
+                      </li>
+                    </ul>
+                  </div>
             </div>
-          </nav>
+        </nav> 
     </header>
     <section class="hero hero-page">
         <div class="content">    
