--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -95,7 +95,7 @@
                 </p>
             </div>
             <div class="text-size-small bluni-color ">
-                <p>Copyright © 2022. <img src="image/logo-footer.svg" alt="bluni"><a href="index"> Bluni Co.</a></p>
+                <p>Copyright © 2022. <img src="../image/logo-footer.svg" alt="bluni"><a href="index"> Bluni Co.</a></p>
             </div>
         </div>
     </footer>
